# cmd_vel_pubsub

./: README.md  package.xml  setup.cfg  setup.py
cmd_vel_pubsub/: cmd_vel_publisher.py  publisher_member_function.py  subscriber_member_function.py
launch/: pubsub.launch.py
