<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_pubsub</name>
  <version>1.0.0</version>
  <description>Examples of publishers and subscribers written in Python.</description>
  <maintainer email="edu@rt-net.jp">RT Corporation</maintainer>
  <author email="kuwagata@rt-net.jp">Atsushi Kuwagata</author>
  <license>Apache-2.0</license>

  <!-- 以下の2行を追加 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
